# clcbs-sim

./: .gitignore  README.md  setup.sh
clcbs_driving/: CMakeLists.txt  output.yaml  package.xml
clcbs_driving/include/: Angle.h  Angle.hpp  CarModel.h  Constants.h  FeedbackContoller.h  FeedbackController.h  GlobalPlanner.h  LocalPlanner.h  PID.hpp  PlanVisualizer.h  StateManager.h  VelocityController.h  WheelOdometer.h
clcbs_driving/launch/: tracking.launch
clcbs_driving/scripts/: drive.py  reset.py
clcbs_driving/src/: Angle.cpp  CarModel.cpp  FeedbackContoller.cpp  FeedbackController.cpp  GlobalPlanner.cpp  LocalPlanner.cpp  PlanVisualizer.cpp  StateManager.cpp  VelocityController.cpp  WheelOdometer.cpp  main.cpp  odom.cpp
clcbs_gazebo/: CMakeLists.txt  package.xml
clcbs_gazebo/launch/: clcbs_config.launch  clcbs_world.launch  clcbs_world.rviz  clcbs_world_rviz.launch
clcbs_gazebo/models/agent/config/: driver_config.yaml  gazebo_controller.yaml
clcbs_gazebo/models/agent/urdf/: agent_sim.gazebo  agent_sim.xacro  course_agv copy.xacro  course_agv.xacro
clcbs_gazebo/models/heightmap/: map.yaml  model.config  model.sdf
clcbs_gazebo/scripts/: VelocityObserver.py  generate_launch.py  keyboard_velocity.py  kinematics.py  reset.sh  robot_tf.py  save.launch  state_publisher.py
clcbs_gazebo/worlds/: clcbs.world
config/: map0.yaml  map1.yaml  map2.yaml  sch0.yaml  sch1.yaml  sch2.yaml
hunter_ros/hunter_base/src/: hunter_base_node.cpp  hunter_messenger.cpp
map_from_yaml/: CMakeLists.txt  package.xml
map_from_yaml/scripts/: map_from_yaml.py  setup.sh
