<?xml version="1.0"?>
<package format="2">
  <name>clcbs_gazebo</name>
  <version>0.0.0</version>
  <description>The course_agv_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="zjunlict@todo.todo">zjunlict</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
</package>
